--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,15 @@
 	path = pender
 	url = git@github.com:meedan/pender.git
 	branch = develop
+[submodule "bridge-web"]
+	path = bridge-web
+	url = git@github.com:meedan/bridge-web.git
+	branch = develop
+[submodule "alegre"]
+	path = alegre
+	url = git@github.com:meedan/alegre.git
+	branch = develop
+[submodule "bridge-reader"]
+	path = bridge-reader
+	url = git@github.com:meedan/bridge-reader.git
+	branch = develop
