Add bridge-bot #5601

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = bridge-reader
 	url = git@github.com:meedan/bridge-reader.git
 	branch = develop
+[submodule "bridge-bot"]
+	path = bridge-bot
+	url = https://github.com/meedan/bridge-bot
