Update submodules, docker volumes, README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
       - api
     volumes:
       - ./bridge-web:/app
+      - ./check-api:/api
+      - /app/node_modules
     environment:
       PLATFORM: web
       NODE_ENV: development
