Activate Bridge Reader #5601

--- a/docker-test.yml
+++ b/docker-test.yml
@@ -19,7 +19,7 @@ services:
       - postgres
       - pender.test
       - alegre.test
- #     - reader.test
+      - reader.test
     volumes:
       - ./check-api:/app
     environment:
@@ -45,15 +45,15 @@ services:
       SERVER_PORT: 13100
     links:
       - elasticsearch
-#  reader.test:
-#    build: bridge-reader
-#    ports:
-#      - 13400:13400
-#    volumes:
-#      - ./bridge-reader:/app
-#    environment:
-#      RAILS_ENV: test
-#      SERVER_PORT: 13400
+  reader.test:
+    build: bridge-reader
+    ports:
+      - 13400:13400
+    volumes:
+      - ./bridge-reader:/app
+    environment:
+      RAILS_ENV: test
+      SERVER_PORT: 13400
   web.test:
     build: bridge-web
     ports:
