--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./elasticsearch/snapshots:/usr/share/elasticsearch/snapshots
       - ./elasticsearch/scripts:/usr/share/elasticsearch/scripts
   postgres:
-    image: postgres
+    image: postgres:9.6
     ports:
       - 5432:5432
     volumes:
@@ -36,13 +36,30 @@ services:
       SERVER_PORT: 3000
   pender:
     build: pender
+    shm_size: 1G
     ports:
       - 3200:3200
+      - 9555:9555
     volumes:
       - ./pender:/app
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3200
+  web:
+    build: check-web
+    ports:
+      - 3333:3333
+    links:
+      - api
+    volumes:
+      - ./check-web:/app
+      - ./check-api:/api
+      - /app/node_modules
+    environment:
+      PLATFORM: web
+      NODE_ENV: development
+      SERVER_PORT: 3333
+      MODE: development
   alegre:
     build: alegre
     ports:
@@ -64,17 +81,3 @@ services:
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3400
-  web:
-    build: check-web
-    ports:
-      - 3333:3333
-    links:
-      - api
-    volumes:
-      - ./check-web:/app
-      - ./check-api:/api
-      - /app/node_modules
-    environment:
-      PLATFORM: web
-      NODE_ENV: development
-      SERVER_PORT: 3333
