--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,41 @@
 version: '2'
+
+volumes:
+  esdata:
+  pgdata:
+
 services:
   elasticsearch:
     image: meedan/elasticsearch:6.3
     environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
+      - "cluster.name=docker-cluster"
+      - "bootstrap.memory_lock=true"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m -Dlog4j2.disable.jmx=true"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     ports:
-      - 9200:9200
+      - "9200:9200"
     volumes:
-      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-      - ./elasticsearch/data:/usr/share/elasticsearch/data
-      - ./elasticsearch/snapshots:/usr/share/elasticsearch/snapshots
+      - "./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
+      - "esdata:/usr/share/elasticsearch/data"
   postgres:
     image: postgres:9.6
+    command: postgres -c config_file=/etc/postgresql.conf
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+      - "./postgresql.conf:/etc/postgresql.conf"
+      - "pgdata:/var/lib/postgresql/data"
     environment:
       POSTGRES_PASSWORD: postgres
   api:
     build: check-api
     ports:
-      - 3000:3000
-      - 6379:6379
-      - 9333:9333
+      - "3000:3000"
+      - "3300:3300"
+      - "6379:6379"
     links:
       - elasticsearch
       - postgres
@@ -37,7 +43,7 @@ services:
       - alegre
       - reader
     volumes:
-      - ./check-api:/app
+      - "./check-api:/app"
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3000
@@ -45,23 +51,23 @@ services:
     build: pender
     shm_size: 1G
     ports:
-      - 3200:3200
-      - 9555:9555
+      - "3200:3200"
+      - "9555:9555"
     volumes:
-      - ./pender:/app
+      - "./pender:/app"
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3200
   web:
     build: check-web
     ports:
-      - 3333:3333
+      - "3333:3333"
     links:
       - api
     volumes:
-      - ./check-web:/app
-      - ./check-api:/api
-      - /app/node_modules
+      - "./check-web:/app"
+      - "./check-api:/api"
+      - "/app/node_modules"
     environment:
       PLATFORM: web
       NODE_ENV: development
@@ -70,9 +76,9 @@ services:
   alegre:
     build: alegre
     ports:
-      - 3100:3100
+      - "3100:3100"
     volumes:
-      - ./alegre:/app
+      - "./alegre:/app"
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3100
@@ -81,10 +87,10 @@ services:
   reader:
     build: bridge-reader
     ports:
-      - 3400:3400
-      - 9222:9222
+      - "3400:3400"
+      - "9222:9222"
     volumes:
-      - ./bridge-reader:/app
+      - "./bridge-reader:/app"
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3400
