--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '2'
-
 volumes:
   esdata:
   pgdata:
-
+networks:
+  dev-network:
 services:
   elasticsearch:
     image: meedan/elasticsearch:6.3
@@ -20,6 +20,8 @@ services:
     volumes:
       - "./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
       - "esdata:/usr/share/elasticsearch/data"
+    networks:
+      - dev-network
   postgres:
     image: postgres:9.6
     command: postgres -c config_file=/etc/postgresql.conf
@@ -30,6 +32,8 @@ services:
       - "pgdata:/var/lib/postgresql/data"
     environment:
       POSTGRES_PASSWORD: postgres
+    networks:
+      - dev-network
   api:
     build: check-api
     ports:
@@ -47,6 +51,8 @@ services:
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3000
+    networks:
+      - dev-network
   pender:
     build: pender
     shm_size: 1G
@@ -58,6 +64,8 @@ services:
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3200
+    networks:
+      - dev-network
   web:
     build: check-web
     ports:
@@ -73,6 +81,8 @@ services:
       NODE_ENV: development
       SERVER_PORT: 3333
       MODE: development
+    networks:
+      - dev-network
   alegre:
     build: alegre
     ports:
@@ -84,6 +94,8 @@ services:
       SERVER_PORT: 3100
     links:
       - elasticsearch
+    networks:
+      - dev-network
   reader:
     build: bridge-reader
     ports:
@@ -94,3 +106,5 @@ services:
     environment:
       RAILS_ENV: development
       SERVER_PORT: 3400
+    networks:
+      - dev-network
